# co2mon

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  main.yml
co2mon/: CHANGELOG.md  Cargo.toml
co2mon/examples/: watch.rs
co2mon/src/: error.rs  lib.rs  serde_types.rs
co2mon/udev/rules.d/: 60-co2mon.rules
zg-co2/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
zg-co2/src/: error.rs  lib.rs  serde_types.rs
