[package]
name = "co2mon"
version = "2.0.2"
authors = ["Laurențiu Nicola <lnicola@dend.ro>"]
edition = "2018"
description = "Driver for the Holtek ZyTemp CO₂ USB HID sensors"
readme = "README.md"
keywords = ["airco2ntrol", "co2", "holtek", "zytemp"]
categories = ["hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lnicola/co2mon"
exclude = ["udev/*"]

[features]
linux-static-libusb = ["hidapi/linux-static-libusb"]
linux-static-hidraw = ["hidapi/linux-static-hidraw"]
linux-shared-libusb = ["hidapi/linux-shared-libusb"]
linux-shared-hidraw = ["hidapi/linux-shared-hidraw"]

[dependencies]
hidapi = "1.0"
zg-co2 = { version = "2.0", path = "../zg-co2" }
