[package]
name = "zg-co2"
version = "1.0.0-alpha.1"
authors = ["Laurențiu Nicola <lnicola@dend.ro>"]
edition = "2018"
description = "ZyAura CO₂ sensor protocol implementation"
readme = "README.md"
keywords = ["co2", "zyaura", "zg"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lnicola/co2mon"

[features]
# Add std support. Currently used to implement std::error::Error
# for zg_co2::Error.
std = []
default = ["std"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
assert_float_eq = { version = "1.1", default-features = false }
