[package]
name = "zg-co2"
version = "2.1.0"
authors = ["Laurențiu Nicola <lnicola@dend.ro>"]
edition = "2018"
description = "ZyAura CO₂ sensor protocol implementation"
readme = "README.md"
keywords = ["co2", "zyaura", "zg"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lnicola/co2mon"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]

# Add std support. Currently used to implement std::error::Error
# for zg_co2::Error.
std = []
